# mtg-zero

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: rules_coverage.yml  rules_index.md
src/mtg_engine/: __init__.py  __main__.py  cli.py
src/mtg_engine/engine/: __init__.py  actions.py  game.py  phases.py  stack.py  state.py
tests/: __init__.py  test_cli_import.py  test_priority.py  test_rules_files_exist.py  test_smoke.py  test_stack.py
tools/: extract_rules_outline.py
